[3.8] bpo-37994: Fix silencing all errors if an attribute lookup fails. (GH-15630)

Only AttributeError should be silenced..
(cherry picked from commit 41c57b335330ff48af098d47e379e0f9ba09d233)

Co-authored-by: Serhiy Storchaka <storchaka@gmail.com>